; ModuleID = '/home/carl/AnghaBench/linux/fs/lockd/extr_svc4proc.c_nlm4svc_proc_free_all.c'
source_filename = "/home/carl/AnghaBench/linux/fs/lockd/extr_svc4proc.c_nlm4svc_proc_free_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.svc_rqst = type { %struct.nlm_args* }
%struct.nlm_args = type { i32 }
%struct.nlm_host = type { i32 }

@rpc_success = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.svc_rqst*)* @nlm4svc_proc_free_all to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nlm4svc_proc_free_all(%struct.svc_rqst* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.svc_rqst*, align 8
  %4 = alloca %struct.nlm_args*, align 8
  %5 = alloca %struct.nlm_host*, align 8
  store %struct.svc_rqst* %0, %struct.svc_rqst** %3, align 8
  %6 = load %struct.svc_rqst*, %struct.svc_rqst** %3, align 8
  %7 = getelementptr inbounds %struct.svc_rqst, %struct.svc_rqst* %6, i32 0, i32 0
  %8 = load %struct.nlm_args*, %struct.nlm_args** %7, align 8
  store %struct.nlm_args* %8, %struct.nlm_args** %4, align 8
  %9 = load %struct.svc_rqst*, %struct.svc_rqst** %3, align 8
  %10 = load %struct.nlm_args*, %struct.nlm_args** %4, align 8
  %11 = call i64 @nlm4svc_retrieve_args(%struct.svc_rqst* %9, %struct.nlm_args* %10, %struct.nlm_host** %5, i32* null)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %1
  %14 = load i32, i32* @rpc_success, align 4
  store i32 %14, i32* %2, align 4
  br label %21

15:                                               ; preds = %1
  %16 = load %struct.nlm_host*, %struct.nlm_host** %5, align 8
  %17 = call i32 @nlmsvc_free_host_resources(%struct.nlm_host* %16)
  %18 = load %struct.nlm_host*, %struct.nlm_host** %5, align 8
  %19 = call i32 @nlmsvc_release_host(%struct.nlm_host* %18)
  %20 = load i32, i32* @rpc_success, align 4
  store i32 %20, i32* %2, align 4
  br label %21

21:                                               ; preds = %15, %13
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i64 @nlm4svc_retrieve_args(%struct.svc_rqst*, %struct.nlm_args*, %struct.nlm_host**, i32*) #1

declare dso_local i32 @nlmsvc_free_host_resources(%struct.nlm_host*) #1

declare dso_local i32 @nlmsvc_release_host(%struct.nlm_host*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
